// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen roles config import-export] should do nothing when the roles already exist: the roles already exist and have not been imported 1`] = `
Object {
  "stderr": "",
  "stdout": "= role => cfgObjectTest
Completed. 0 object(s) imported.
",
}
`;

exports[`[mutagen roles config import-export] should import the roles: the roles have been imported 1`] = `
Object {
  "stderr": "",
  "stdout": "+ role => cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
